sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:24: error: not found: value nb
}while(indice1!=0 || indice2 !=0 || fin <= nb-2 || fin >= 0)
                                           ^